--- a/h2/makefile
+++ b/h2/makefile
@@ -1,4 +1,10 @@
 cc = g++
 
+sum: maxSubSum.cpp
+	$(cc) -O3 maxSubSum.cpp -o sum
+
+rect: detectRect.cpp
+	$(cc) -O3 detectRect.cpp -o rect
+
 exp: exponent.cpp
 	$(cc) -O3 exponent.cpp -o exp
