Stupid bug in knapsack.cpp corrected
The g factor should not be multiplied to the final result.

--- a/h3/makefile
+++ b/h3/makefile
@@ -3,6 +3,9 @@ cc = g++
 1: knapsack.cpp
 	$(cc) -O knapsack.cpp -o knapsack
 
+1LH: knapsack_LH.cpp
+	$(cc) -O knapsack_LH.cpp -o knapsack_LH
+
 2: LICS.cpp
 	$(cc) -O LICS.cpp -o LICS
 
